# skvk-flutter

./: .coderabbit.yaml  .flutter-plugins-dependencies  .gitignore  AUDIO_PLAYER_MIGRATION_SUMMARY.md  AUDIO_PLAYER_REFACTOR_README.md  LICENSE  README.md  analysis_options.yaml  fix_analyzer.sh  pubspec.yaml
.cursor/plans/: swiss-ephemeris-production-licensing-808f8f1f.plan.md
.github/workflows/: ci.yml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  swisseph_wrapper.cpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/astrology/: astrology_library.dart
lib/astrology/cache/: astrology_cache_manager.dart
lib/astrology/engines/: astrology_engine.dart
lib/config/: app_config.dart
lib/core/architecture/: module_registry.dart
lib/core/base/: base_export.dart  base_provider.dart  base_repository.dart  base_state.dart  base_usecase.dart
lib/core/config/: app_config.dart  environment_config.dart  production_config.dart
lib/core/constants/: app_constants.dart  app_strings.dart  swiss_ephemeris_attribution.dart  user_friendly_text.dart
lib/screens/: about_screen.dart  home_screen.dart  home_screen_clean.dart  pradakshana_screen.dart
licenses/: SWISS_EPHEMERIS_LICENSE.txt
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements
macos/Runner.xcodeproj/: project.pbxproj
test/unit/: audio_controller_test.dart
tool/benchmarks/: compare_accuracy.dart  compare_with_reference.dart
web/: index.html  manifest.json
(+384 files in other folders)
